--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body.game-lose::before {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('https://media.giphy.com/media/3o7abB06u9bNzA8LC8/giphy.gif');
+    background-image: url('jumpscare.gif');
     background-size: cover;
     background-position: center;
     opacity: 0.7;
@@ -286,3 +286,4 @@ h2 {
         font-size: 40px;
     }
 }
+
